--- a/indexFinal.html
+++ b/indexFinal.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Photo Gallery</title>
-	<link rel="stylesheet" href="css/style.css">
-	<script src="js/script.js"></script>
+	<link rel="stylesheet" href="style.css">
+	<script src="script.js"></script>
 </head>
 
 <body onload="addTabFocus()">
@@ -15,7 +15,7 @@
 
 	<!-- 6 IMAGES avec alt + mouse + focus -->
 	<img class="preview"
-	     src="images/Arduino_Uno_-_R3.jpg"
+	     src="Arduino_Uno_-_R3.jpg"
 	     alt="Carte Arduino Uno"
 	     onmouseover="upDate(this)"
 	     onmouseout="unDo()"
@@ -23,7 +23,7 @@
 	     onblur="unDo()">
 
 	<img class="preview"
-	     src="images/esp32_devkitc.jpg"
+	     src="esp32_devkitc.jpg"
 	     alt="Carte ESP32 DevKit"
 	     onmouseover="upDate(this)"
 	     onmouseout="unDo()"
@@ -31,7 +31,7 @@
 	     onblur="unDo()">
 
 	<img class="preview"
-	     src="images/Raspberry_Pi_Pico_oblique.jpg"
+	     src="Raspberry_Pi_Pico_oblique.jpg"
 	     alt="Raspberry Pi Pico"
 	     onmouseover="upDate(this)"
 	     onmouseout="unDo()"
@@ -39,7 +39,7 @@
 	     onblur="unDo()">
 
 	<img class="preview"
-	     src="images/Arduino_Mega.jpg"
+	     src="Arduino_Mega.jpg"
 	     alt="Carte Arduino Mega"
 	     onmouseover="upDate(this)"
 	     onmouseout="unDo()"
@@ -47,7 +47,7 @@
 	     onblur="unDo()">
 
 	<img class="preview"
-	     src="images/nodemcu_esp32c2.jpg"
+	     src="nodemcu_esp32c2.jpg"
 	     alt="Carte NodeMCU ESP32"
 	     onmouseover="upDate(this)"
 	     onmouseout="unDo()"
@@ -55,7 +55,7 @@
 	     onblur="unDo()">
 
 	<img class="preview"
-	     src="images/Raspberry_Pi_4.jpg"
+	     src="Raspberry_Pi_4.jpg"
 	     alt="Carte Raspberry Pi 4"
 	     onmouseover="upDate(this)"
 	     onmouseout="unDo()"
@@ -68,3 +68,4 @@
 
 </body>
 </html>
+
